load("@bazel_skylib//rules:common_settings.bzl", "int_flag", "string_flag")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//img/private:signing_config.bzl", "unset_signing_config")

string_flag(
    name = "compress",
    build_setting_default = "gzip",
    values = [
        "gzip",
        "zstd",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "estargz",
    build_setting_default = "disabled",
    values = [
        "enabled",
        "disabled",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "stamp",
    build_setting_default = "auto",
    values = [
        "auto",
        "force",
        "disabled",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "push_strategy",
    build_setting_default = "eager",
    values = [
        "eager",
        "lazy",
        "cas_registry",
        "bes",
    ],
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "load_strategy",
    build_setting_default = "eager",
    values = [
        "eager",
        "lazy",
    ],
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "load_daemon",
    build_setting_default = "docker",
    values = [
        "docker",
        "containerd",
        "podman",
        "containerization",
        "tar",
        "generic",
    ],
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "remote_cache",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "remote_instance_name",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "credential_helper",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

# Credential helper used only for OCI registry operations (push, pull, tag).
# Takes precedence over the generic credential_helper for registry auth.
string_flag(
    name = "credential_helper_oci_registry",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

# Credential helper used only to authenticate gRPC calls to the remote cache /
# remote execution API. Takes precedence over the generic credential_helper for
# those calls.
string_flag(
    name = "credential_helper_remote_cache",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "docker_config_path",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "shallow_oci_layout",
    build_setting_default = "forbidden",
    values = [
        "forbidden",
        "i_know_what_i_am_doing",
    ],
    visibility = ["//img/private:__subpackages__"],
)

# Global signing mode. Per-target `sign` attributes default to "auto", which
# defers to this flag.
string_flag(
    name = "sign",
    build_setting_default = "disabled",
    values = [
        "enabled",
        "disabled",
        "best_effort",
    ],
    visibility = ["//visibility:public"],
)

# Global default signing_config, used when a target enables signing without its
# own `sign_setting`. Defaults to a sentinel meaning "no signing configured".
label_flag(
    name = "sign_setting",
    build_setting_default = ":unset_sign_setting",
    visibility = ["//visibility:public"],
)

unset_signing_config(
    name = "unset_sign_setting",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)

string_flag(
    name = "compression_jobs",
    build_setting_default = "auto",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "compression_level",
    build_setting_default = "auto",
    values = [
        "auto",
        "fastest",
        "best",
        "-1",
        "0",
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
        "7",
        "8",
        "9",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "create_parent_directories",
    build_setting_default = "disabled",
    values = [
        "enabled",
        "disabled",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "layer_tree_artifact_handling",
    build_setting_default = "full",
    values = [
        "full",
        "deduplicate_symlink",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "runfiles_shared_path",
    build_setting_default = ".shared_runfiles",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "runfiles_sharing_mode",
    build_setting_default = "auto",
    values = [
        "auto",
        "shared",
        "private",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "cross_mount",
    build_setting_default = "same_registry",
    values = [
        "same_registry",
        "cross_registry",
        "disabled",
    ],
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "destination_registry",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "experimental_compact_layers",
    build_setting_default = "disabled",
    values = [
        "enabled",
        "disabled",
    ],
    visibility = ["//visibility:public"],
)

int_flag(
    name = "experimental_compact_layers_inline_threshold",
    build_setting_default = 4096,
    visibility = ["//visibility:public"],
)

# Push image blobs (and optionally manifests) at build time, wired as a Bazel
# validation action. See docs.
string_flag(
    name = "push_at_build_time",
    build_setting_default = "disabled",
    values = [
        "disabled",
        "best_effort",
        "enabled",
    ],
    visibility = ["//visibility:public"],
)

# Controls what the push-at-build-time actions push: just the layer blobs, or the
# layer blobs plus the config and manifest(s)/tags (a full push at build time).
string_flag(
    name = "push_at_build_time_content",
    build_setting_default = "blobs_and_manifests",
    values = [
        "blobs",
        "blobs_and_manifests",
    ],
    visibility = ["//visibility:public"],
)

# When non-empty, layer blobs are pushed to this repository (a "staging"
# repository within the destination registry) and cross-mounted from there when
# the manifest is pushed to its real repository. Applies to both push-at-build-time
# and `bazel run` pushes.
string_flag(
    name = "push_at_build_time_repository",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

# Optional OCI distribution gateway endpoints. When set, registry requests made by
# build actions (lazy layer downloads and build-time uploads) are routed through
# the gateway instead of talking to the registry directly. `registry_gateway` is
# the shared fallback for both push and pull; the mode-specific flags take
# precedence. These map to the IMG_REGISTRY_GATEWAY / IMG_REGISTRY_PUSH_GATEWAY /
# IMG_REGISTRY_PULL_GATEWAY environment variables read by the img tool.
string_flag(
    name = "registry_gateway",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "registry_push_gateway",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "registry_pull_gateway",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

# When "enabled", `img deploy` (image_push / multi_deploy) is forbidden from
# uploading layer blob bytes: layers may still be cross-mounted server-side or
# skipped when already present, but an actual upload fails loudly. Use when layer
# blobs are pushed at build time (e.g. via push_at_build_time) so a
# deploy that would re-upload them is caught instead of silently succeeding.
string_flag(
    name = "forbid_layer_push",
    build_setting_default = "disabled",
    values = [
        "disabled",
        "enabled",
    ],
    visibility = ["//visibility:public"],
)

# Path prefix for entries in the layer `mtree` output group. "./" makes every
# entry an unambiguous full-path entry (recommended). "" emits bare tar paths;
# in that mode directory entries are given a trailing "/" so they still contain
# a slash and are not parsed as relative entries.
string_flag(
    name = "mtree_path_prefix",
    build_setting_default = "./",
    values = [
        "./",
        "",
    ],
    visibility = ["//visibility:public"],
)

# Comma-separated list of fields to include in the layer `mtree` output group, in
# order, on a best-effort basis. Supported: type, size, mode, uid, uname, gid,
# gname, sha256, time, link, nlink, xattr.
string_flag(
    name = "mtree_options",
    build_setting_default = "type,size,mode,uid,uname,gid,gname,sha256,time,link,nlink",
    visibility = ["//visibility:public"],
)

# How the layer `mtree` output group is laid out. "tar" emits one entry per tar
# entry in exact tar order (whiteouts kept, no synthesized directories).
# "oci_layer_filesystem_applied_changeset" applies the layer as an OCI changeset
# to an empty filesystem (synthesizing missing parent directories and applying
# whiteouts / opaque whiteouts) and serializes the resulting tree in a stable
# sorted order.
string_flag(
    name = "mtree_layer_layout",
    build_setting_default = "tar",
    values = [
        "tar",
        "oci_layer_filesystem_applied_changeset",
    ],
    visibility = ["//visibility:public"],
)

# How the image `mtree` output group is laid out. An image `mtree` is produced by
# merging the per-layer `mtree` files (in layer order) into one spec.
# "oci_layer_filesystem_applied_changeset" (default) applies the layers as an OCI
# changeset to an empty filesystem -- synthesizing missing parent directories and
# applying whiteouts across layers -- yielding the image's final filesystem view.
# "tar" concatenates the per-layer entries in order, keeping every layer's entries
# (including whiteout markers) verbatim. For the changeset layout to apply
# whiteouts correctly, the per-layer `mtree` files must keep their whiteout markers,
# i.e. mtree_layer_layout should be "tar" (the default).
string_flag(
    name = "mtree_image_layout",
    build_setting_default = "oci_layer_filesystem_applied_changeset",
    values = [
        "tar",
        "oci_layer_filesystem_applied_changeset",
    ],
    visibility = ["//visibility:public"],
)

# Controls how org.opencontainers.image.ref.name is set in the docker save index.json.
# "full_reference" (default) uses the full image reference (e.g. registry.io/repo:tag),
# which is compatible with skopeo and rules_oci.
# "tag_only" uses just the tag (e.g. "tag"), which matches the OCI image spec.
string_flag(
    name = "oci_ref_name",
    build_setting_default = "full_reference",
    values = [
        "full_reference",
        "tag_only",
    ],
    visibility = ["//img/private:__subpackages__"],
)

# A file of extra image-config labels merged into every image's config.json.
# The file is parsed by the `kvfile` package (newline-delimited KEY=VALUE, a JSON
# object, or a JSON array of KEY=VALUE) and is NOT template-expanded. Override it
# to point at any single-file target, e.g.
#   common --@rules_img//img/settings:additional_image_labels_file=//path:labels
# The default is an empty file, so by default no extra labels are added.
label_flag(
    name = "additional_image_labels_file",
    build_setting_default = ":empty_additional_image_labels",
    visibility = ["//visibility:public"],
)

# The empty-file default for :additional_image_labels_file. An empty file parses
# to zero labels, leaving every config.json byte-identical unless the flag is set.
write_file(
    name = "empty_additional_image_labels",
    out = "empty_additional_image_labels.txt",
    content = [],
    visibility = ["//img/private:__subpackages__"],
)
