# gazelle:prefix github.com/bazel-contrib/rules_img/modules/rules_img_internal_tools
# gazelle:lang go,proto,bzl

# Map this module's own importpaths to in-repo labels.
# gazelle:resolve_regexp go github.com/bazel-contrib/rules_img/modules/rules_img_internal_tools/(.*) //$1

# Cross-module Go imports resolved to their Bazel labels.
# gazelle:resolve go github.com/bazel-contrib/rules_img/img_tool/pkg/registry @rules_img_tool//pkg/registry
