load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:multi_deploy.bzl", "multi_deploy")
load("@rules_img//img:push.bzl", "image_push")
load("@rules_img//img:signing.bzl", "signing_config")

# gazelle:exclude_from_release

# Analysis/build coverage for the signing wiring. Uses host-command plugins
# ("true") so no real signer binary is required; the deploy-metadata action runs
# and records the sign_setting descriptor, and the push binary's runfiles gain
# the fixed sign_settings area.

write_file(
    name = "hello_txt",
    out = "hello.txt",
    content = ["hello signing\n"],
)

image_layer(
    name = "layer",
    srcs = {"/etc/hello.txt": ":hello_txt"},
)

image_manifest(
    name = "image",
    layers = [":layer"],
)

signing_config(
    name = "by_command",
    args = [
        "--profile",
        "test",
    ],
    targets = [
        "roots",
        "child_manifests",
    ],
    tool_command = "true",
)

image_push(
    name = "push_enabled",
    image = ":image",
    registry = "example.com",
    repository = "test/app",
    sign = "enabled",
    sign_setting = ":by_command",
)

image_push(
    name = "push_best_effort",
    image = ":image",
    registry = "example.com",
    repository = "test/app",
    sign = "best_effort",
    sign_setting = ":by_command",
)

multi_deploy(
    name = "deploy_all",
    operations = [
        ":push_best_effort",
        ":push_enabled",
    ],
)
